# Scoutcoin

./: CONTRIBUTING.md  COPYING  INSTALL.md  Makefile  Makefile.am  Makefile.in  README.md  config.status  configure  configure.ac  libbitcoinconsensus.pc  libtool
autom4te.cache/: output.0  requests  traces.0  traces.1  traces.2
build-aux/m4/: bitcoin_qt.m4
build_msvc/: README.md
contrib/: README.md  gitian-build.py  install_db4.sh
contrib/devtools/: gen-manpages.sh
depends/: README.md  description.md
doc/: JSON-RPC-interface.md  README.md  README_windows.txt  REST-interface.md  assets-attribution.md  benchmarking.md  build-freebsd.md  build-netbsd.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  dependencies.md  descriptors.md  developer-notes.md  dnsseed-policy.md  files.md  fuzzing.md  reduce-traffic.md  release-notes-scoutcoin.md  release-process.md  scoutcoin-conf.md  tor.md  travis-ci.md  zmq.md
doc/man/: Makefile  Makefile.am  Makefile.in  scoutcoin-cli.1  scoutcoin-qt.1  scoutcoin-tx.1  scoutcoin-wallet.1  scoutcoind.1
share/: setup.nsi  setup.nsi.in
src/: Makefile  Makefile.am  Makefile.bench.include  Makefile.in  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  bitcoin-cli-res.rc  bitcoin-cli.cpp  bitcoin-tx-res.rc  bitcoin-tx.cpp  bitcoin-wallet-res.rc  bitcoin-wallet.cpp  bitcoind-res.rc  bitcoind.cpp  chainparams.cpp  chainparamsseeds.h  clientversion.cpp  httpserver.cpp  init.cpp  net.cpp  net_processing.cpp  netaddress.cpp  pow.cpp  txdb.cpp  validation.cpp
test/: README.md  config.ini
(+229 files in other folders)
