dist_man1_MANS=

if BUILD_BITCOIND
  dist_man1_MANS+=scoutcoind.1
endif

if ENABLE_QT
  dist_man1_MANS+=scoutcoin-qt.1
endif

if BUILD_BITCOIN_CLI
  dist_man1_MANS+=scoutcoin-cli.1
endif

if BUILD_BITCOIN_TX
  dist_man1_MANS+=scoutcoin-tx.1
endif

if ENABLE_WALLET
if BUILD_BITCOIN_WALLET
  dist_man1_MANS+=scoutcoin-wallet.1
endif
endif
